# pyflyt_dogfight

./: pyproject.toml  readme.md  requirements.txt
pyflyt_dogfight/: __init__.py  dogfight_env.py
pyflyt_dogfight/models/aggressor/: aggressor.urdf  aggressor.yaml
src/: swarmer.py  test_aviary.py  test_env.py
